# kc-server

./: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
src/: db.rs  lib.rs  main.rs
src/handlers/: analytics.rs  auth.rs  binary.rs  check_email.rs  google_oauth.rs  health.rs  license.rs  merge.rs  mod.rs  notification.rs  security.rs  settings.rs  sse.rs  stats.rs  telemetry.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: binary.rs  binary_instance.rs  license.rs  merge_task.rs  mod.rs  notification.rs  user.rs  verification_attempt.rs
src/overload/: config.rs  mod.rs  network.rs
src/security/: encryption.rs  hmac.rs  mod.rs  signing.rs
src/services/: access_control.rs  binary_patcher.rs  license_patcher.rs  mod.rs  otp.rs  progress_subscriber.rs  storage.rs
src/utils/: jwt.rs  mod.rs  overload_version.rs  pagination.rs
tests/: integration_test.rs
tests/common/: mod.rs
