[package]
name = "kc-server"
version = "0.0.0"
edition = "2024"
authors = ["Krishna Kushwaha"]

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
actix-multipart = "0.6"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1"
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
validator = { version = "0.18", features = ["derive"] }
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }
reqwest = { version = "0.11", features = ["multipart", "json", "blocking"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hostname = "0.3"
semver = "1.0"  # For version management
# Security dependencies for HMAC authentication
hmac = "0.12"
hex = "0.4"
rand = "0.8"
subtle = "2.5"  # For constant-time comparisons
# Encryption dependencies
aes-gcm = "0.10"
base64 = "0.21"
# Rate limiting
actix-governor = "0.5"
# GeoIP
maxminddb = "0.24"
goblin = "0.10.3"

# Library for shared modules
[lib]
name = "server"
path = "src/lib.rs"

# Binary targets
[[bin]]
name = "server"
path = "src/main.rs"
